--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@types/react-helmet": "^6.1.11",
+    "@types/react-scroll": "^1.8.10",
     "autoprefixer": "^10.4.7",
     "gatsby-plugin-postcss": "^6.13.1",
     "postcss": "^8.4.14",
