--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/pro-duotone-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "gatsby": "^5.13.2",
     "gatsby-plugin-gatsby-cloud": "^5.13.1",
     "gatsby-plugin-google-gtag": "^5.13.1",
